unpackaged/objects/PaymentDetail__c.object
<CustomObject>
    <description>To store payment details</description>
    <fields>
        <fullName>Amountpayed__c</fullName>
        <description>from payment integration</description>
        <label>Amount payed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duedate__c</fullName>
        <description>DueDate</description>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMIAmount__c</fullName>
        <formula>InterestAmount__c  +  PrincipalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InterestAmount__c</fullName>
        <label>Interest amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanApplication__c</fullName>
        <description>To link to payment</description>
        <label>Loan Application</label>
        <referenceTo>LoanApplication__c</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PrincipalAmount__c</fullName>
        <description>To store principal amount</description>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>Pay-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>